added code for data binding

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,10 @@
 <script src="scripts/controllers/WatchController.js" type="text/javascript"></script>
 <script src="scripts/directives/EventDirective.js" type="text/javascript"></script>
 <script src="scripts/controllers/EventController.js" type="text/javascript"></script>
+<script src="scripts/controllers/SimpleController.js" type="text/javascript"></script>
+<script src="scripts/controllers/NestedController.js" type="text/javascript"></script>
+<script src="scripts/controllers/ScopeInheritanceController.js" type="text/javascript"></script>
+<script src="scripts/controllers/DataBindingController.js" type="text/javascript"></script>
 <!-- endbuild -->
 </body>
 </html>
